<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="onesong">1 song</string>
    <plurals name="Nsongs">
        <item quantity="other"><xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nsongscomp">
        <item quantity="other"><xliff:g id="count_for_artist">%2$d</xliff:g> of <xliff:g id="total_count">%1$d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nalbums">

        
        <item quantity="one">1 album</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="goto_start">Library</string>
    <string name="party_shuffle">Party shuffle</string>
    <string name="party_shuffle_off">Party shuffle off</string>
    <string name="party_shuffle_on">Party shuffle on</string>
    <string name="delete_item">Delete</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="delete_artist_desc">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from the SD card.</string>
    <string name="delete_artist_desc_nosdcard">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from USB storage.</string>
    <string name="delete_album_desc">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc_nosdcard">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_song_desc">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_song_desc_nosdcard">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_confirm_button_text">OK</string>
    <plurals name="NNNtracksdeleted">

        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <string name="scanning">Scanning SD card\u2026</string>
    <string name="scanning_nosdcard">Scanning USB storage\u2026</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="videos_title">Videos</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Artists</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_videos_title">No videos</string>
    <string name="no_playlists_title">No playlists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="podcasts_title">Podcasts</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_title_nosdcard">No USB storage</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_missing_message_nosdcard">Your phone does not have USB storage.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_title_nosdcard">USB storage unavailable</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_busy_message_nosdcard">Sorry, your USB storage is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_title_nosdcard">USB storage error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="sdcard_error_message_nosdcard">An error was encountered on your USB storage.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on</string>
    <string name="shuffle_off_notif">Shuffle is off</string>
    <string name="repeat_off_notif">Repeat is off</string>
    <string name="repeat_current_notif">Repeating current song</string>
    <string name="repeat_all_notif">Repeating all songs</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" set as phone ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="queue">Queue</string>
    <string name="new_playlist">New playlist</string>
    <string name="show_all">Show All</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <string name="audio_cat">Audio</string>
    <string name="ui_cat">UI</string>
    <string name="shake_action_title_bg">Send to Background</string>
    <string name="shake_action_summary_bg">The Tab action will continue working outside the app</string>
    <string name="customizations_title">Customization</string>
    <string name="customizations_summary">Heavy modification</string>
    <string name="small_np_window_title">Small Now Playing Window</string>
    <string name="small_np_window_summary">Customize smaller now playing window</string>
    <string name="small_np_ui">Small Window UI</string>
    <string name="small_np_ui_summary">Media buttons, text views, font size</string>
    <string name="np_media_play_title">Play and Pause</string>
    <string name="np_media_next_title">Next Track</string>
    <string name="np_media_prev_title">Previous Track</string>
    <string name="np_media_search_title">Search Music</string>
    <string name="np_media_playlist_title">Quick Playlist</string>
    <string name="np_media_market_title">Market Search</string>
    <string name="np_media_share_title">Share Track</string>
    <string name="np_media_album_art_title">Album Art</string>
    <string name="np_media_play_summary">Play and Pause music</string>
    <string name="np_media_next_summary">Play next track</string>
    <string name="np_media_prev_summary">Play previous track</string>
    <string name="np_media_search_summary">Search your music</string>
    <string name="np_media_playlist_summary">Create a Quick Playlist (Playlist tab only)</string>
    <string name="np_media_market_summary">Search Market for currently playing artist</string>
    <string name="np_media_share_summary">Show your current track</string>
    <string name="np_media_album_art_summary">Show album art</string>
    <string name="np_tv">	Small Now Playing Window Text Views</string>
    <string name="np_tv_artist">Artist Name</string>
    <string name="np_tv_album">Album Name</string>
    <string name="np_tv_track">Track Name</string>
    <string name="np_tv_artist_summary">Show artist name</string>
    <string name="np_tv_album_summary">Show album name</string>
    <string name="np_tv_track_summary">Show track name</string>
    <string name="np_font_title">Font Size</string>
    <string name="np_font_dialog_title">Now Playing Window Font Size</string>
    <string name="np_font_summary">Choose your font size for artist, album, and track</string>
    <string name="np_progress_title">Progress bar</string>
    <string name="np_progress_summary">Show a progress bar above your controls</string>
    <string name="swipe_up_gesture">Swipe Up Gesture</string>
    <string name="status_bar_ui_title">Status Bar UI</string>
    <string name="status_bar_ui_summary">Customize the status bar</string>
    <string name="status_bar_close">Stop Playback</string>
    <string name="status_bar_close_summary">Cease all music</string>
    <string name="status_bar_text_views">Status Bar Text Views</string>
    <string name="status_bar_color_picker">Status Bar Text Color Picker</string>
    <string name="status_bar_color_picker_summary">Change the color for album, artist, and track in
		the status bar</string>
    <string name="full_np_title">Enter Full Now Playing Screen</string>
    <string name="full_np_summary">Enter into the full "Now Playing" screen when your
		music starts</string>
    <string name="album_art_anim_title">Now Playing Animations</string>
    <string name="album_art_anim_summary">Animate the album art in the "Now Playing" screen</string>
    <string name="status_bar_nonya_title">Minimal</string>
    <string name="status_bar_nonya_summary">Remove the album art/status icon when the status bar is extended</string>
    <string name="build_version">Build Version</string>
    <string name="build_version_summary">Unknown</string>
    <string name="flip_to_pause">Flip To Pause</string>
    <string name="flip_to_pause_summary">Flip your phone over to quickly pause your music then back up to resume</string>
    <string name="home_art">Album Art As Wallpaper</string>
    <string name="home_art_summary">Set your home screen wallpaper to the current album art while playing</string>
    <string name="lock">Lock Screen Controls</string>
    <string name="lock_summary">Enables lock screen controls</string>
    <string name="effectspanel">Sound effects</string>
    <string name="effectspanel_summary">FX Booster, Bass boost, 3D effect, etc</string>
    <string name="settings">Settings</string>
    <string name="duck_attenuation_db_title">Duck attentuation</string>
    <string name="duck_attenuation_db_summary">Select the amount by which to attenuate the volume
		during focus loss</string>
    <string name="back_button_action_title">Long Press Back Button Action</string>
    <string name="back_button_action">Long Press Back Button</string>
    <string name="back_button_action_summary">Select long-press action while in tabs</string>
    <string name="np_swipe_gesture_title">Now Playing Gesture</string>
    <string name="np_swipe_gesture_title_summary">Small now playing window gesture</string>
    <string name="shaker_title_artist">Tab Shake Actions</string>
    <string name="shaker_summary_artist">Shake action for each tab</string>
    <string name="shaker_title_nowplaying">Now Playing Shake Actions</string>
    <string name="shaker_summary_nowplaying">Shake action for the Now Playing tab</string>
    <string name="shaker_title">Shake and Flip Actions</string>
    <string name="shaker_summary">Select your "shake" and "flip" actions</string>
    <string name="animation_ui_title">Animations</string>
    <string name="animation_ui_summary">Customize your animations</string>
    <string name="pref_title_theme_settings">Themes Chooser</string>
    <string name="pref_summary_theme_settings">Select themes for Music</string>
    <string name="pref_title_theme_package">Select your theme</string>
    <string name="color_picker_sample">Music</string>
    <string name="color_picker_alpha">Transparency</string>
    <string name="color_picker_red">Red</string>
    <string name="color_picker_green">Green</string>
    <string name="color_picker_blue">Blue</string>
</resources>