<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorPickerFrame_gesture"
    android:layout_width="270dip"
    android:layout_height="320dip" >

    <TextView
        android:id="@+id/color_picker_alpha_gesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="0dip"
        android:text="@string/color_picker_alpha" />

    <SeekBar
        android:id="@+id/a_seekbar_gesture"
        android:layout_width="180dip"
        android:layout_height="30dip"
        android:layout_gravity="top|center"
        android:layout_marginTop="20dip"
        android:max="255"
        android:progress="0" />

    <TextView
        android:id="@+id/color_picker_red_gesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dip"
        android:text="@string/color_picker_red" />

    <SeekBar
        android:id="@+id/r_seekbar_gesture"
        android:layout_width="180dip"
        android:layout_height="30dip"
        android:layout_gravity="top|center"
        android:layout_marginTop="70dip"
        android:max="255"
        android:progress="0" />

    <TextView
        android:id="@+id/color_picker_green_gesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dip"
        android:text="@string/color_picker_green" />

    <SeekBar
        android:id="@+id/g_seekbar_gesture"
        android:layout_width="180dip"
        android:layout_height="30dip"
        android:layout_gravity="top|center"
        android:layout_marginTop="120dip"
        android:max="255"
        android:progress="0" />

    <TextView
        android:id="@+id/color_picker_blue_gesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="150dip"
        android:text="@string/color_picker_blue" />

    <SeekBar
        android:id="@+id/b_seekbar_gesture"
        android:layout_width="180dip"
        android:layout_height="30dip"
        android:layout_gravity="top|center"
        android:layout_marginTop="170dip"
        android:max="255"
        android:progress="0" />

    <FrameLayout
        android:id="@+id/colorsampleLayout_gesture"
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="15dip"
        android:background="#000" >

        <TextView
            android:id="@+id/color_picker_sample_gesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/color_picker_sample"
            android:textSize="50dip" />
    </FrameLayout>

</FrameLayout>